--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -12,12 +12,20 @@
             android:id="@+id/validToOnBoarding"
             app:destination="@id/onBoardingScreen"
             app:enterAnim="@anim/fragment_fade_enter"
-            app:exitAnim="@anim/fragment_fade_exit" />
+            app:exitAnim="@anim/fragment_fade_exit"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/main_graph"
+            app:popUpToInclusive="true"
+            />
         <action
-            android:id="@+id/validToOnDashboard"
+            android:id="@+id/skipToDashboard"
             app:destination="@id/dashboardScreen"
             app:enterAnim="@anim/fragment_open_enter"
-            app:exitAnim="@anim/fragment_open_exit" />
+            app:exitAnim="@anim/fragment_open_exit"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/main_graph"
+            app:popUpToInclusive="true"
+            />
     </fragment>
     <fragment
         android:id="@+id/onBoardingScreen"
@@ -33,14 +41,24 @@
     <fragment
         android:id="@+id/dashboardScreen"
         android:name="com.bns.mobile.presenter.screens.dashboard.DashboardScreen"
-        android:label="DashboardScreen" />
+        android:label="DashboardScreen" >
+        <action
+            android:id="@+id/logOut"
+            app:launchSingleTop="true"
+            app:popUpToInclusive="true"
+            app:destination="@id/splashScreen" />
+    </fragment>
     <fragment
         android:id="@+id/loginScreen"
         android:name="com.bns.mobile.presenter.screens.login.LoginScreen"
-        android:label="LoginScreen" >
+        android:label="LoginScreen">
         <action
-            android:id="@+id/action_loginScreen_to_dashboardScreen"
-            app:destination="@id/dashboardScreen" />
+            android:id="@+id/goToDashboard"
+            app:destination="@id/dashboardScreen"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/main_graph"
+            app:popUpToInclusive="true"
+            />
     </fragment>
     <fragment
         android:id="@+id/registrationScreen"
