--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,12 @@
     tools:context=".presenter.MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
         android:id="@+id/main_nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/main_graph"
-        />
+        app:navGraph="@navigation/main_graph" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
